test/cases/compile_errors/invalid_underscore_placement_in_float_literal-3.zig
fn main() void {
    var bad: f128 = 0.0_;
    _ = bad;
}

// error
// backend=stage2
// target=native
//
// :2:24: error: trailing digit separator
